# halo2_ml

./: .gitignore  Cargo.toml  LICENSE  dhat-heap.json  run_benches.sh
benches/: mlp_4d.rs
examples/: benchmarking.rs  evm_verify.rs  lenet_lookalike.rs  mlp_4d.rs  rocky.rs
network_inputs/: 0_deep_test.json  0_long_test.json  0_tall_test.json  1_deep_test.json  lenet_lookalike_micro.json  rockybot.json
src/: avg_pool.rs  batchnorm.rs  conv.rs  dist_add.rs  dist_addmultadd.rs  dist_mul.rs  gather.rs  lib.rs  nn_chip.rs  norm_2d.rs  relu_2d.rs  sigmoid.rs  sigmoid_2d.rs
src/nn_ops/: eltwise_ops.rs  lookup_ops.rs  mod.rs
src/nn_ops/matrix_ops/: mod.rs
src/nn_ops/matrix_ops/linear/: batchnorm.rs  conv.rs  dist_add.rs  dist_add_fixed.rs  dist_addmultadd.rs  dist_mul.rs  mod.rs  residual_add.rs
src/nn_ops/matrix_ops/non_linear/: avg_pool.rs  mod.rs  norm_2d.rs  relu_2d.rs  relu_norm_2d.rs  sigmoid_2d.rs
src/nn_ops/vector_ops/: gather.rs  mod.rs
src/nn_ops/vector_ops/linear/: fc.rs  fc_old.rs  mod.rs
src/nn_ops/vector_ops/non_linear/: eltwise_ops.rs  mod.rs  sigmoid.rs
